Refactor: new movement mechanics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<span>Towers destroyed:</span>
 	<span id="score"></span>
 </div>
+<script src="js/character.js"></script>
 <script src="js/tower.js"></script>
 <script src="js/castle.js"></script>
 <script src="js/wizard.js"></script>
