Update: added archer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="js/castle.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/knight.js"></script>
+<script src="js/archer.js"></script>
 <script src="js/tile.js"></script>
 <script src="js/board.js"></script>
 <script src="js/app.js"></script>
